# Codescribe

./: .gitignore  README.md  WINDOWS.md  codescribe.bat  make_showcase.py  pyproject.toml  requirements.txt  sample_README.md  showcase.bat  showcase.html
codescribe/: __init__.py  __main__.py  cli.py  graph.py  models.py  parser.py  pipeline.py  render.py
codescribe/templates/: readme.md.j2
sample_repo/: __init__.py  customer.py  main.py  order.py  utils.py
tests/: test_graph.py  test_parser.py  test_pipeline.py
