[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codescribe"
version = "0.1.0"
description = "Deterministic AST → dependency-graph → schema-validated LLM → Markdown README generator for Python codebases."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
graph = ["networkx>=3.0"]
dev = ["pytest>=7.0"]

[project.scripts]
codescribe = "codescribe.cli:main"

[tool.setuptools.packages.find]
include = ["codescribe*"]

[tool.setuptools.package-data]
codescribe = ["templates/*.j2"]
